[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/entity/Mini_Boss/EntityMiniBoss.gd" type="Script" id=1]
[ext_resource path="res://nodes/entity/EntityBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://shaders/Color_Palette_Shader.tres" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=157]
shader = ExtResource( 4 )
shader_param/frame_count = Vector2( 3, 0 )
shader_param/frame_coordinate = Vector2( 0.013, 0 )

[sub_resource type="Animation" id=155]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/palette")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ null ]
}

[sub_resource type="Animation" id=156]
resource_name = "damage"
length = 0.1
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "switch_to_hurt_palette"
}, {
"args": [  ],
"method": "return_to_palette"
} ]
}

[node name="EntityMiniBossBase" instance=ExtResource( 2 )]
script = ExtResource( 1 )
boss_music = "res://sound_assests/music/fight/mini_boss_fight.ogg"
grounded = false
spawn_offset = Vector2( 0, 0 )
Damage_Chart_Path = ""
palette = null
standard_palette = Vector2( 0, 0 )
ex_palette = Vector2( 0, 0 )
hurt_palette = Vector2( 0, 0 )
explosion_rect = Rect2( 0, 0, 0, 0 )

[node name="Sprite" parent="." index="0"]
material = SubResource( 157 )

[node name="Flash_anim" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 155 )
anims/damage = SubResource( 156 )

[node name="Yield_Timer" type="Timer" parent="." index="7"]
process_mode = 0
one_shot = true

[node name="Idle_Timer" type="Timer" parent="." index="8"]
process_mode = 0
one_shot = true

[connection signal="Damage_taken" from="." to="." method="_on_EntityMiniBossBase_Damage_taken"]
[connection signal="state_changed" from="." to="." method="_on_EntityMiniBossBase_state_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Idle_Timer" to="." method="_on_Idle_Timer_timeout"]

[editable path="Hurtbox"]
